# CMSE802_PROJECT

./: .gitignore  README.md  pyproject.toml
docs/: SLIDE_DECK.pptx
notebooks/: exploration.ipynb  modeling.ipynb  utils.py
results/: cat_xgb_SHAP_by_category.csv  cat_xgb_category_results.csv  cat_xgb_ensemble_results.csv  cat_xgb_individual_results.csv  naive_baseline_results.csv  optuna_lr_trials.csv  optuna_rf_trials.csv  overall_results.csv  per_category_accuracy.csv  untuned_model_results.csv  xgb_SHAP_overall.csv  xgb_category_results.csv  xgb_individual_results.csv  xgb_results.csv
results/model_results/: optuna_Art_xgb_trials.csv  optuna_Comics_xgb_trials.csv  optuna_Design_xgb_trials.csv  optuna_None_xgb_trials.csv  optuna_Photography_xgb_trials.csv  optuna_Theater_xgb_trials.csv
results/model_results/rf_categorical/: optuna_Crafts_rf_trials.csv  optuna_Dance_rf_trials.csv  optuna_Fashion_rf_trials.csv  optuna_Film & Video_rf_trials.csv  optuna_Journalism_rf_trials.csv  optuna_None_rf_trials.csv  optuna_Technology_rf_trials.csv
results/model_results/xgb_categorical/: optuna_Art_xgb_trials.csv  optuna_Comics_xgb_trials.csv  optuna_Crafts_xgb_trials.csv  optuna_Dance_xgb_trials.csv  optuna_Design_xgb_trials.csv  optuna_Fashion_xgb_trials.csv  optuna_Film & Video_xgb_trials.csv  optuna_Food_xgb_trials.csv  (+8 more)
results/optimization_trials/: optuna_rf_trials.csv  optuna_xgb_trials.csv
src/: config.py  download_data.py  modeling.py  optimization.py  preprocessing.py  utils.py
tests/: test_modeling.py  test_preprocessing.py  test_utils.py
(+25 files in other folders)
